<resources>
    <string name="app_name">GoogleServiceFoody</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="facebook_app_id">713940865723397</string>
    <string name="fb_login_protocol_scheme">fb713940865723397</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="place">Địa điểm</string>
    <string name="suggestion">Suggestion</string>

    <string name="moinhanh">Mới nhất</string>
    <string name="danhmuc">Danh mục</string>
    <string name="khuvuc">HCM</string>



    <!--Function Trang Chu-->
    <string name="gantoi">Gần tôi</string>
    <string name="giaohang">Giao hàng</string>
    <string name="gameandfun">Game-Fun</string>
    <string name="danhgia">Đánh giá</string>
    <string name="blog">Blog</string>
    <string name="topmember">Top Member</string>

    <string name="dangxuly"> Đang xử lý</string>


</resources>
